[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/StandingsBar.gd" type="Script" id=1]
[ext_resource path="res://images/StandingsBar.png" type="Texture" id=2]

[node name="Standings" type="Node2D"]
z_index = 10
script = ExtResource( 1 )

[node name="StandingsBackground" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="P1_Label" type="Label" parent="."]
margin_left = -286.0
margin_top = -11.0
margin_right = -133.0
margin_bottom = 14.0
text = "    0                  00.00"
valign = 1

[node name="P2_Label" type="Label" parent="."]
margin_left = -84.9835
margin_top = -11.0
margin_right = 68.0165
margin_bottom = 14.0
text = "    0                  00.00"
valign = 1

[node name="P3_Label" type="Label" parent="."]
margin_left = 115.0
margin_top = -11.0
margin_right = 268.0
margin_bottom = 14.0
text = "    0                  00.00"
valign = 1

[node name="P4_Label" type="Label" parent="."]
margin_left = 313.0
margin_top = -11.0
margin_right = 466.0
margin_bottom = 14.0
text = "    0                  00.00"
valign = 1
